--- a/composer.json
+++ b/composer.json
@@ -8,19 +8,41 @@
         "survey"
     ],
     "license": "MIT",
+    "authors": [
+        {
+            "name": "Tapp Network",
+            "email": "steve@tappnetwork.com",
+            "role": "Developer"
+        },
+        {
+            "name": "Tapp Network",
+            "email": "andreia.bohner@tappnetwork.com",
+            "role": "Developer"
+        }
+    ],
     "homepage": "https://github.com/TappNetwork/filament-survey",
     "support": {
         "issues": "https://github.com/TappNetwork/filament-survey/issues",
         "source": "https://github.com/TappNetwork/filament-survey"
     },
     "require": {
-        "php": "^8.0",
-        "filament/filament": "^2.0",
-        "filament/notifications": "^2.0",
+        "php": "^8.1",
+        "filament/filament": "^3.0-stable",
+        "filament/spatie-laravel-translatable-plugin": "^3.0-stable",
+        "matt-daneshvar/laravel-survey": "dev-translatable",
         "maatwebsite/excel": "^3.1",
         "spatie/eloquent-sortable": "^4.0",
-        "spatie/laravel-package-tools": "^1.12.1"
+        "spatie/laravel-package-tools": "^1.9"
     },
+    "require-dev": {
+        "doctrine/dbal": "^3.6"
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/TappNetwork/laravel-survey"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "Tapp\\FilamentSurvey\\": "src"
