--- a/composer.json
+++ b/composer.json
@@ -25,14 +25,14 @@
         "issues": "https://github.com/TappNetwork/filament-survey/issues",
         "source": "https://github.com/TappNetwork/filament-survey"
     },
-    "require": {
-        "php": "^8.1",
-        "filament/filament": "^3.0-stable",
-        "filament/spatie-laravel-translatable-plugin": "^3.0-stable",
-        "maatwebsite/excel": "^3.1",
-        "spatie/eloquent-sortable": "^4.0",
-        "spatie/laravel-package-tools": "^1.9"
-    },
+   "require": {
+    "php": "^8.2",
+    "filament/filament": "^3.2",
+    "filament/spatie-laravel-translatable-plugin": "^3.2",
+    "maatwebsite/excel": "^3.1",
+    "spatie/eloquent-sortable": "^4.0.2",
+    "spatie/laravel-package-tools": "^1.16"
+},
     "require-dev": {
         "doctrine/dbal": "^3.6"
     },
