--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,9 @@
         "source": "https://github.com/TappNetwork/filament-survey"
     },
     "require": {
-        "php": "^8.1",
-        "filament/filament": "^3.0-stable",
-        "filament/spatie-laravel-translatable-plugin": "^3.0-stable",
+        "php": "^8.2",
+        "filament/filament": "^4.0",
+        "lara-zeus/spatie-translatable": "^1.0",
         "maatwebsite/excel": "^3.1",
         "spatie/eloquent-sortable": "^4.0",
         "spatie/laravel-package-tools": "^1.9"
